精简代码，学习在线算法和外存学习

--- a/learnsklearn/OpinionMining.ipynb
+++ b/learnsklearn/OpinionMining.ipynb
@@ -13,67 +13,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyprind"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "生成一个50000次迭代的进度条"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pbar = pyprind.ProgBar(50000) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labels = {'pos':1,'neg':0}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import pyprind\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import numpy as np\n",
+    "pbar = pyprind.ProgBar(50000) #生成一个50000次迭代的进度条\n",
+    "labels = {'pos':1,'neg':0}\n",
     "df = pd.DataFrame()"
    ]
   },
@@ -88,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -96,37 +41,19 @@
      "output_type": "stream",
      "text": [
       "0% [##############################] 100% | ETA: 00:00:00\n",
-      "Total time elapsed: 00:03:40\n"
+      "Total time elapsed: 00:04:26\n"
      ]
     }
    ],
    "source": [
     "for s in ('test','train'):\n",
     "    for l in ('pos','neg'):\n",
-    "        path = '/home/fannian/too_data/aclImdb/%s/%s' % (s,l)\n",
+    "        path = '/home/fannian/tool_data/aclImdb/%s/%s' % (s,l)\n",
     "        for file in os.listdir(path):\n",
     "            with open(os.path.join(path,file), 'r') as infile:\n",
     "                txt = infile.read()\n",
     "            df = df.append([[txt, labels[l]]], ignore_index=True)\n",
     "            pbar.update()#更新进度条"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.columns = ['review', 'sentiment']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.random.seed(0)"
    ]
   },
   {
@@ -139,19 +66,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.reindex(np.random.permutation(df.index))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df.columns = ['review', 'sentiment']\n",
+    "np.random.seed(0)\n",
+    "df = df.reindex(np.random.permutation(df.index))\n",
     "df.to_csv('/home/fannian/tool_data/outdata/movie_data.csv',index = False)"
    ]
   },
@@ -164,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -175,109 +96,18 @@
       "[nltk_data]     /home/fannian/nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "nltk.download('stopwords')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import nltk"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nltk.stem.porter import PorterStemmer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.feature_extraction.text import TfidfTransformer,TfidfVectorizer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.feature_extraction.text import CountVectorizer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.naive_bayes import MultinomialNB"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nltk.corpus import stopwords"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split,GridSearchCV,cross_val_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.pipeline import Pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import nltk\n",
+    "import re\n",
+    "from nltk.stem.porter import PorterStemmer\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer,TfidfVectorizer\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from nltk.corpus import stopwords\n",
+    "from sklearn.model_selection import train_test_split,GridSearchCV,cross_val_score\n",
+    "from sklearn.pipeline import Pipeline\n",
     "from sklearn.linear_model import LogisticRegression"
    ]
   },
@@ -290,59 +120,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "count = CountVectorizer()#词频：训练后生成一个词频字典"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tfidf = TfidfTransformer()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.set_printoptions(precision=2)#设置numpy显示"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "docs = np.array([\n",
-    "    'The sun is shining',\n",
-    "    'The weather is sweet',\n",
-    "    'The sun is shining and the weather is sweet'\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bag = count.fit_transform(docs)#生成特征词向量的压缩行稀疏矩阵"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [
     {
      "name": "stdout",
@@ -350,26 +129,7 @@
      "text": [
       "{'the': 5, 'sun': 3, 'is': 1, 'shining': 2, 'weather': 6, 'sweet': 4, 'and': 0}\n"
      ]
-    }
-   ],
-   "source": [
-    "print(count.vocabulary_) #返回一个词频字典"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tff = tfidf.fit_transform(bag) #计算词向量矩阵的TFIDF矩阵，并进行归一化处理"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
@@ -378,18 +138,29 @@
        "       [1, 2, 1, 1, 1, 2, 1]], dtype=int64)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "count = CountVectorizer()#词频：训练后生成一个词频字典\n",
+    "tfidf = TfidfTransformer()\n",
+    "np.set_printoptions(precision=2)#设置numpy显示\n",
+    "docs = np.array([\n",
+    "    'The sun is shining',\n",
+    "    'The weather is sweet',\n",
+    "    'The sun is shining and the weather is sweet'\n",
+    "])\n",
+    "bag = count.fit_transform(docs)#生成特征词向量的压缩行稀疏矩阵\n",
+    "print(count.vocabulary_) #返回一个词频字典\n",
+    "tff = tfidf.fit_transform(bag) #计算词向量矩阵的TFIDF矩阵，并进行归一化处理\n",
     "bag.toarray()#将压缩行系数矩阵转为ndarray格式"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +171,7 @@
        "       [0.4 , 0.48, 0.31, 0.31, 0.31, 0.48, 0.31]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,39 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('/home/fannian/tool_data/outdata/movie_data.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dr = df.loc[0,'review'][-50:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def preprocessor(text):\n",
-    "    text = re.sub('<[^>]*>','',text)#正则表达式将Html符号替换掉\n",
-    "    emoticons = re.findall('(?::|;|=)(?:-)?(?:\\)|\\(|D|P)',text)#找出表情符号并以列表形式存储\n",
-    "    #替换所有非单词字符,将文本转换为小写，并将表情符号追加到文本之后（删除代表鼻子的字符-）\n",
-    "    text = re.sub('[\\W]+',' ',text.lower()) + ''.join(emoticons).replace('-','')\n",
-    "    return text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -459,18 +198,26 @@
        "'is seven title brazil not available'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df = pd.read_csv('/home/fannian/tool_data/outdata/movie_data.csv')\n",
+    "dr = df.loc[0,'review'][-50:]\n",
+    "def preprocessor(text):\n",
+    "    text = re.sub('<[^>]*>','',text)#正则表达式将Html符号替换掉\n",
+    "    emoticons = re.findall('(?::|;|=)(?:-)?(?:\\)|\\(|D|P)',text)#找出表情符号并以列表形式存储\n",
+    "    #替换所有非单词字符,将文本转换为小写，并将表情符号追加到文本之后（删除代表鼻子的字符-）\n",
+    "    text = re.sub('[\\W]+',' ',text.lower()) + ''.join(emoticons).replace('-','')\n",
+    "    return text\n",
     "preprocessor(dr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +226,7 @@
        "'this is a test :):(:)'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,38 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "porter = PorterStemmer() #词干提取算法"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def tokenizer_porter(text):\n",
-    "    \"\"\"以空格符分割字符串，返回一个单词列表,并对该列表每个元素进行词干提取\"\"\"\n",
-    "    return [porter.stem(word) for word in text.split()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def tokenizer(text):\n",
-    "    \"\"\"以空格符分割字符串，返回一个单词列表\"\"\"\n",
-    "    return text.split()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -546,27 +262,27 @@
        "['runner', 'like', 'run', 'and', 'thu', 'they', 'run']"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "porter = PorterStemmer() #词干提取算法\n",
+    "\n",
+    "def tokenizer_porter(text):\n",
+    "    \"\"\"以空格符分割字符串，返回一个单词列表,并对该列表每个元素进行词干提取\"\"\"\n",
+    "    return [porter.stem(word) for word in text.split()]\n",
+    "def tokenizer(text):\n",
+    "    \"\"\"以空格符分割字符串，返回一个单词列表\"\"\"\n",
+    "    return text.split()\n",
+    "\n",
     "tokenizer_porter('runners like running and thus they run')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stop = stopwords.words('english')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -575,12 +291,13 @@
        "['runner', 'like', 'run', 'run', 'lot']"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "stop = stopwords.words('english')\n",
     "[w for w in tokenizer_porter('a runner likes running and runs a lot')[-10:] if w not in stop]"
    ]
   },
@@ -593,70 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = df.loc[:,'review'].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = df.loc[:,'sentiment'].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train, X_test,y_train,y_test = train_test_split(X,y,test_size=0.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nb = MultinomialNB(alpha=0.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lr = LogisticRegression(C=10.0,penalty='l2')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tfidf_vect =  TfidfVectorizer(stop_words=None,tokenizer=tokenizer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nb_tfidf = Pipeline([('vect',tfidf_vect),('clf',lr)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -670,42 +324,99 @@
     {
      "data": {
       "text/plain": [
-       "Pipeline(memory=None,\n",
-       "     steps=[('vect', TfidfVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
-       "        dtype=<class 'numpy.float64'>, encoding='utf-8', input='content',\n",
-       "        lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
-       "        ngram_range=(1, 1), norm='l2', preprocessor=None, smooth_idf=True,\n",
-       "...penalty='l2', random_state=None, solver='warn',\n",
-       "          tol=0.0001, verbose=0, warm_start=False))])"
+       "0.90056"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nb_tfidf.fit(X_train,y_train)"
+    "X = df.loc[:,'review'].values\n",
+    "y = df.loc[:,'sentiment'].values\n",
+    "X_train, X_test,y_train,y_test = train_test_split(X,y,test_size=0.5)\n",
+    "nb = MultinomialNB(alpha=0.1)\n",
+    "lr = LogisticRegression(C=10.0,penalty='l2')\n",
+    "tfidf_vect =  TfidfVectorizer(stop_words=None,tokenizer=tokenizer)\n",
+    "nb_tfidf = Pipeline([('vect',tfidf_vect),('clf',lr)])\n",
+    "nb_tfidf.fit(X_train,y_train)\n",
+    "nb_tfidf.score(X_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 在线算法与外存学习"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.89576"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"In 1974, \n",
+      "Accuracy: 0.867\n"
+     ]
     }
    ],
    "source": [
-    "nb_tfidf.score(X_test,y_test)"
+    "def tokenizer(text):\n",
+    "    '''清理movie_data.csv文件中未经处理的文本'''\n",
+    "    text =re.sub('<[^>]*>','',text)\n",
+    "    emoticons=re.findall('(?::|;|=)(?:-)?(?:\\)|\\(|D|P)',text.lower())\n",
+    "    text=re.sub('[\\W]+',' ',text.lower()) + ' '.join(emoticons).replace('-','')\n",
+    "    tokenized = [w for w in text.split() if w not in stop]\n",
+    "    return tokenized\n",
+    "\n",
+    "def stream_docs(path):\n",
+    "    '''每次读取且返回一个文档的内容'''\n",
+    "    with open(path,'r') as csv:\n",
+    "        next(csv)\n",
+    "        for line in csv:\n",
+    "            text,label = line[:-3],int(line[-2])\n",
+    "            yield text,label\n",
+    " \n",
+    "print (next(stream_docs(path='/home/fannian/tool_data/outdata/movie_data.csv'))[0][:10])\n",
+    "\n",
+    "def get_minibatch(doc_stream,size):\n",
+    "    '''以stream_doc函数得到的文档数据流作为输入，\n",
+    "    并通过参数size返回指定数量的文档内容'''\n",
+    "    docs,y=[],[]\n",
+    "    try:\n",
+    "        for _ in range(size):\n",
+    "            text,label=next(doc_stream)\n",
+    "            docs.append(text)\n",
+    "            y.append(label)\n",
+    "    except StopIteration:\n",
+    "        return None,None\n",
+    "    return docs,y\n",
+    "\n",
+    "from sklearn.feature_extraction.text import HashingVectorizer\n",
+    "from sklearn.linear_model import SGDClassifier\n",
+    "vect = HashingVectorizer(decode_error='ignore',n_features=2**21,\n",
+    "                         preprocessor=None,tokenizer=tokenizer)\n",
+    "clf = SGDClassifier(loss='log',random_state=1)\n",
+    "doc_stream = stream_docs(path='/home/fannian/tool_data/outdata/movie_data.csv')\n",
+    "\n",
+    "pbar=pyprind.ProgBar(45)\n",
+    "classes = np.array([0,1])\n",
+    "for _ in range(45):\n",
+    "    X_train,y_train = get_minibatch(doc_stream,size=1000)\n",
+    "    if not X_train:\n",
+    "        break\n",
+    "    X_train = vect.transform(X_train)\n",
+    "    clf.partial_fit(X_train,y_train,classes=classes)\n",
+    "    pbar.update\n",
+    "    \n",
+    "X_test,y_test=get_minibatch(doc_stream,size=5000)\n",
+    "X_test =vect.transform(X_test)\n",
+    "print ('Accuracy: %.3f' % clf.score(X_test,y_test))"
    ]
   }
  ],
