学习标准化的模型外存方法pickle

--- a/learnsklearn/OpinionMining.ipynb
+++ b/learnsklearn/OpinionMining.ipynb
@@ -19,7 +19,8 @@
     "import numpy as np\n",
     "pbar = pyprind.ProgBar(50000) #生成一个50000次迭代的进度条\n",
     "labels = {'pos':1,'neg':0}\n",
-    "df = pd.DataFrame()"
+    "df = pd.DataFrame()\n",
+    "home_path='/Users/fannian/'"
    ]
   },
   {
@@ -41,14 +42,14 @@
      "output_type": "stream",
      "text": [
       "0% [##############################] 100% | ETA: 00:00:00\n",
-      "Total time elapsed: 00:04:26\n"
+      "Total time elapsed: 00:05:28\n"
      ]
     }
    ],
    "source": [
     "for s in ('test','train'):\n",
     "    for l in ('pos','neg'):\n",
-    "        path = '/home/fannian/tool_data/aclImdb/%s/%s' % (s,l)\n",
+    "        path = home_path+'tool_data/aclImdb/%s/%s' % (s,l)\n",
     "        for file in os.listdir(path):\n",
     "            with open(os.path.join(path,file), 'r') as infile:\n",
     "                txt = infile.read()\n",
@@ -73,7 +74,7 @@
     "df.columns = ['review', 'sentiment']\n",
     "np.random.seed(0)\n",
     "df = df.reindex(np.random.permutation(df.index))\n",
-    "df.to_csv('/home/fannian/tool_data/outdata/movie_data.csv',index = False)"
+    "df.to_csv(home_path+'tool_data/outdata/movie_data.csv',index = False)"
    ]
   },
   {
@@ -85,19 +86,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /home/fannian/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import nltk\n",
     "import re\n",
@@ -120,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +129,7 @@
        "       [1, 2, 1, 1, 1, 2, 1]], dtype=int64)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +162,7 @@
        "       [0.4 , 0.48, 0.31, 0.31, 0.31, 0.48, 0.31]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,22 +180,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'is seven title brazil not available'"
+       "'to star cinema way to go jericho and claudine '"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('/home/fannian/tool_data/outdata/movie_data.csv')\n",
+    "df = pd.read_csv(home_path+'tool_data/outdata/movie_data.csv')\n",
     "dr = df.loc[0,'review'][-50:]\n",
     "def preprocessor(text):\n",
     "    text = re.sub('<[^>]*>','',text)#正则表达式将Html符号替换掉\n",
@@ -217,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +217,7 @@
        "'this is a test :):(:)'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +253,7 @@
        "['runner', 'like', 'run', 'and', 'thu', 'they', 'run']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +282,7 @@
        "['runner', 'like', 'run', 'run', 'lot']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,24 +301,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/mnt/d/ProgramFiles_linux/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "/Users/fannian/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
       "  FutureWarning)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.90056"
+       "0.89872"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,15 +344,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"In 1974, \n",
-      "Accuracy: 0.867\n"
+      "\"My family\n",
+      "Accuracy: 0.868\n"
      ]
     }
    ],
@@ -382,7 +373,7 @@
     "            text,label = line[:-3],int(line[-2])\n",
     "            yield text,label\n",
     " \n",
-    "print (next(stream_docs(path='/home/fannian/tool_data/outdata/movie_data.csv'))[0][:10])\n",
+    "print (next(stream_docs(path=home_path+'tool_data/outdata/movie_data.csv'))[0][:10])\n",
     "\n",
     "def get_minibatch(doc_stream,size):\n",
     "    '''以stream_doc函数得到的文档数据流作为输入，\n",
@@ -402,7 +393,7 @@
     "vect = HashingVectorizer(decode_error='ignore',n_features=2**21,\n",
     "                         preprocessor=None,tokenizer=tokenizer)\n",
     "clf = SGDClassifier(loss='log',random_state=1)\n",
-    "doc_stream = stream_docs(path='/home/fannian/tool_data/outdata/movie_data.csv')\n",
+    "doc_stream = stream_docs(path=home_path+'tool_data/outdata/movie_data.csv')\n",
     "\n",
     "pbar=pyprind.ProgBar(45)\n",
     "classes = np.array([0,1])\n",
@@ -417,6 +408,28 @@
     "X_test,y_test=get_minibatch(doc_stream,size=5000)\n",
     "X_test =vect.transform(X_test)\n",
     "print ('Accuracy: %.3f' % clf.score(X_test,y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 序列化通过scikit-learn拟合的模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import os\n",
+    "dest = os.path.join('movieclassifier','pkl_objects')\n",
+    "if not os.path.exists(dest):\n",
+    "    os.makedirs(dest)\n",
+    "pickle.dump(stop,open(os.path.join(dest,'stopwords.pkl'),'wb'),protocol=4)#protocol协议\n",
+    "pickle.dump(clf,open(os.path.join(dest,'classifier.pkl'),'wb'),protocol=4)"
    ]
   }
  ],
