--- a/learnsklearn/OpinionMining.ipynb
+++ b/learnsklearn/OpinionMining.ipynb
@@ -42,7 +42,7 @@
      "output_type": "stream",
      "text": [
       "0% [##############################] 100% | ETA: 00:00:00\n",
-      "Total time elapsed: 00:05:28\n"
+      "Total time elapsed: 00:05:19\n"
      ]
     }
    ],
@@ -419,12 +419,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "import os\n",
+    "import numpy as np\n",
     "dest = os.path.join('movieclassifier','pkl_objects')\n",
     "if not os.path.exists(dest):\n",
     "    os.makedirs(dest)\n",
