学习模型的持久化

--- a/learnsklearn/movieclassifier/序列化通过scikit-learn拟合的模型.ipynb
+++ b/learnsklearn/movieclassifier/序列化通过scikit-learn拟合的模型.ipynb
@@ -2,10 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction: positive\n",
+      "Probability: 82.47%\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "import re\n",
+    "import os\n",
+    "from vectorizer import vect\n",
+    "clf = pickle.load(open(os.path.join('pkl_objects','classifier.pkl'),'rb'))\n",
+    "import numpy as np\n",
+    "label = {0:'negative',1:'positive'}\n",
+    "example = ['I love this movie']\n",
+    "X = vect.transform(example)\n",
+    "print ('Prediction: %s\\nProbability: %.2f%%' %\\\n",
+    "       (label[clf.predict(X)[0]],\n",
+    "       np.max(clf.predict_proba(X))*100))"
+   ]
   }
  ],
  "metadata": {
