--- a/learnsklearn/OpinionMining.ipynb
+++ b/learnsklearn/OpinionMining.ipynb
@@ -20,7 +20,7 @@
     "pbar = pyprind.ProgBar(50000) #生成一个50000次迭代的进度条\n",
     "labels = {'pos':1,'neg':0}\n",
     "df = pd.DataFrame()\n",
-    "home_path='/Users/fannian/'"
+    "home_path=os.environ['HOME']"
    ]
   },
   {
@@ -42,14 +42,14 @@
      "output_type": "stream",
      "text": [
       "0% [##############################] 100% | ETA: 00:00:00\n",
-      "Total time elapsed: 00:05:19\n"
+      "Total time elapsed: 00:03:55\n"
      ]
     }
    ],
    "source": [
     "for s in ('test','train'):\n",
     "    for l in ('pos','neg'):\n",
-    "        path = home_path+'tool_data/aclImdb/%s/%s' % (s,l)\n",
+    "        path = home_path+'/tool_data/aclImdb/%s/%s' % (s,l)\n",
     "        for file in os.listdir(path):\n",
     "            with open(os.path.join(path,file), 'r') as infile:\n",
     "                txt = infile.read()\n",
@@ -74,7 +74,7 @@
     "df.columns = ['review', 'sentiment']\n",
     "np.random.seed(0)\n",
     "df = df.reindex(np.random.permutation(df.index))\n",
-    "df.to_csv(home_path+'tool_data/outdata/movie_data.csv',index = False)"
+    "df.to_csv(home_path+'/tool_data/outdata/movie_data.csv',index = False)"
    ]
   },
   {
@@ -186,7 +186,7 @@
     {
      "data": {
       "text/plain": [
-       "'to star cinema way to go jericho and claudine '"
+       "'is seven title brazil not available'"
       ]
      },
      "execution_count": 7,
@@ -195,7 +195,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(home_path+'tool_data/outdata/movie_data.csv')\n",
+    "df = pd.read_csv(home_path+'/tool_data/outdata/movie_data.csv')\n",
     "dr = df.loc[0,'review'][-50:]\n",
     "def preprocessor(text):\n",
     "    text = re.sub('<[^>]*>','',text)#正则表达式将Html符号替换掉\n",
@@ -308,14 +308,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/fannian/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "/mnt/d/ProgramFiles_linux/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
       "  FutureWarning)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.89872"
+       "0.89976"
       ]
      },
      "execution_count": 12,
@@ -344,15 +344,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"My family\n",
-      "Accuracy: 0.868\n"
+      "Accuracy: 0.867\n"
      ]
     }
    ],
@@ -373,7 +372,7 @@
     "            text,label = line[:-3],int(line[-2])\n",
     "            yield text,label\n",
     " \n",
-    "print (next(stream_docs(path=home_path+'tool_data/outdata/movie_data.csv'))[0][:10])\n",
+    "#print (next(stream_docs(path=home_path+'/tool_data/outdata/movie_data.csv'))[0][:10])\n",
     "\n",
     "def get_minibatch(doc_stream,size):\n",
     "    '''以stream_doc函数得到的文档数据流作为输入，\n",
@@ -393,7 +392,7 @@
     "vect = HashingVectorizer(decode_error='ignore',n_features=2**21,\n",
     "                         preprocessor=None,tokenizer=tokenizer)\n",
     "clf = SGDClassifier(loss='log',random_state=1)\n",
-    "doc_stream = stream_docs(path=home_path+'tool_data/outdata/movie_data.csv')\n",
+    "doc_stream = stream_docs(path=home_path+'/tool_data/outdata/movie_data.csv')\n",
     "\n",
     "pbar=pyprind.ProgBar(45)\n",
     "classes = np.array([0,1])\n",
@@ -407,7 +406,8 @@
     "    \n",
     "X_test,y_test=get_minibatch(doc_stream,size=5000)\n",
     "X_test =vect.transform(X_test)\n",
-    "print ('Accuracy: %.3f' % clf.score(X_test,y_test))"
+    "print ('Accuracy: %.3f' % clf.score(X_test,y_test))\n",
+    "clf=clf.partial_fit(X_test,y_test)"
    ]
   },
   {
@@ -419,12 +419,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
-    "import os\n",
     "import numpy as np\n",
     "dest = os.path.join('movieclassifier','pkl_objects')\n",
     "if not os.path.exists(dest):\n",
