--- a/learnsklearn/聚类算法.ipynb
+++ b/learnsklearn/聚类算法.ipynb
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -603,6 +603,33 @@
     "axm.set_xticklabels(['']+list(df_rowclust.columns))\n",
     "axm.set_yticklabels(['']+list(df_rowclust.index))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 层次聚类-sklearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster labels: [0 1 1 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.cluster import AgglomerativeClustering\n",
+    "ac= AgglomerativeClustering(n_clusters=2,affinity='euclidean',linkage='complete')\n",
+    "labels = ac.fit_predict(X)\n",
+    "print('Cluster labels: %s' % labels)"
    ]
   }
  ],
