神经网络-实现多层感知器

--- a/learnsklearn/神经网络.ipynb
+++ b/learnsklearn/神经网络.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -25,12 +25,12 @@
     "import struct\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "pah = os.path.join(os.environ['HOME'],'downloads/demodata')\n",
+    "pah = os.path.join(os.environ['HOME'],'Downloads/demodata')\n",
     "\n",
     "def load_mnist(path,kind='train'):\n",
     "    \"\"\"Load MNIST data from path\"\"\"\n",
-    "    labels_path = os.path.join(path,'%s-labels.idx1-ubyte' % kind)\n",
-    "    images_path = os.path.join(path,'%s-images.idx3-ubyte' % kind)\n",
+    "    labels_path = os.path.join(path,'%s-labels-idx1-ubyte' % kind)\n",
+    "    images_path = os.path.join(path,'%s-images-idx3-ubyte' % kind)\n",
     "    with open(labels_path,'rb') as lbpath:\n",
     "        magic, n = struct.unpack('>II',lbpath.read(8))\n",
     "        labels = np.fromfile(lbpath,dtype=np.uint8)\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -132,6 +132,13 @@
     "y_train = np.genfromtxt(pah+'/train_img.csv',dtype=int,delimiter=',')\n",
     "X_test = np.genfromtxt(pah+'/train_img.csv',dtype=int,delimiter=',')\n",
     "y_test = np.genfromtxt(pah+'/train_img.csv',dtype=int,delimiter=',')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 实现一个多层感知器"
    ]
   }
  ],
