学习 梯度检验调试

--- a/learnsklearn/神经网络.ipynb
+++ b/learnsklearn/神经网络.ipynb
@@ -299,6 +299,61 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 梯度检验调试"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OK: 2.577323847716801e-10\n",
+      "OK: 3.106090324325899e-10\n",
+      "OK: 2.381983175942633e-10\n",
+      "OK: 3.0376360993797205e-10\n",
+      "OK: 3.3683451426365997e-10\n",
+      "OK: 3.5875948348755163e-10\n",
+      "OK: 2.2021771884527452e-10\n",
+      "OK: 2.3373877759376676e-10\n",
+      "OK: 3.28763661110504e-10\n",
+      "OK: 2.1363722298314012e-10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<neuralnet.NeuralNetMLP at 0x11c201e10>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from neuralnet import NeuralNetMLP\n",
+    "nn_check = NeuralNetMLP(n_output=10,\n",
+    "                 n_features=X_train.shape[1],\n",
+    "                 n_hidden=10,\n",
+    "                 l2=0.0,\n",
+    "                 l1=0.0,\n",
+    "                 epochs=10,\n",
+    "                 eta=0.001,\n",
+    "                 alpha=0.0,\n",
+    "                 decrease_const=0.0,\n",
+    "                 minibatches=1,\n",
+    "                 random_state=1)\n",
+    "nn_check.fit(X_train[:5],y_train[:5],print_progress=False)"
+   ]
   }
  ],
  "metadata": {
