--- a/learnsklearn/端到端的机器学习项目.ipynb
+++ b/learnsklearn/端到端的机器学习项目.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "from six.moves import urllib\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "DOWNLOAD_ROOT = \"https://raw.githubusercontent.com/ageron/handson-ml/master/\"\n",
     "HOUSING_PATH = \"datasets/housing\"\n",
     "HOUSING_URL = DOWNLOAD_ROOT + HOUSING_PATH + \"/housing.tgz\"\n",
@@ -34,16 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fetch_housing_data()"
+    "#fetch_housing_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +166,7 @@
        "4       565.0       259.0         3.8462            342200.0        NEAR BAY  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +223,7 @@
        "Name: ocean_proximity, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +402,7 @@
        "max         500001.000000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -431,6 +432,54 @@
    "source": [
     "housing.hist(bins=50, figsize=(20,15))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16512 train+ 4128 test\n"
+     ]
+    }
+   ],
+   "source": [
+    "def split_train_test(data,test_ratio):\n",
+    "    shuffled_indices = np.random.permutation(len(data))\n",
+    "    test_set_size = int(len(data)*test_ratio)\n",
+    "    test_indices=shuffled_indices[:test_set_size]\n",
+    "    train_indices=shuffled_indices[test_set_size:]\n",
+    "    return data.iloc[train_indices],data.iloc[test_indices]\n",
+    "\n",
+    "train_set,test_set=split_train_test(housing,0.2)\n",
+    "print (len(train_set),\"train+\",len(test_set),\"test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import hashlib\n",
+    "\n",
+    "def test_set_check(identifier,test_ratio,hash):\n",
+    "    return hash(np.int64(identifier)).digest()[-1]<256*test_ratio\n",
+    "\n",
+    "def split_train_test_by_id(data,test_tatio,id_column,hash=hashlib.md5):\n",
+    "    ids = data[id_column]\n",
+    "    in_test_set = ids.apply(lambda id_:test_set_check(id_,test_tatio,hash))\n",
+    "    return data.loc[~in_test_set],data.loc[in_test_set]\n",
+    "\n",
+    "#方法一：使用行索引作为唯一标识符，需要确保在数据集末尾添加新数据，并且不会删除任何行\n",
+    "housing_with_id = housing.reset_index()\n",
+    "#方法二：使用经纬度作为唯一标识符，最稳定的特征\n",
+    "housing_with_id[\"id\"] = housing[\"longitude\"]*1000+housing[\"latitude\"]\n",
+    "train_set,test_set = split_train_test_by_id(housing_with_id,0.2,\"id\")"
    ]
   }
  ],
