--- a/learnsklearn/端到端的机器学习项目.ipynb
+++ b/learnsklearn/端到端的机器学习项目.ipynb
@@ -1,8 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+    "# 获取数据"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,6 +486,64 @@
     "#方法二：使用经纬度作为唯一标识符，最稳定的特征\n",
     "housing_with_id[\"id\"] = housing[\"longitude\"]*1000+housing[\"latitude\"]\n",
     "train_set,test_set = split_train_test_by_id(housing_with_id,0.2,\"id\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0    0.350581\n",
+      "2.0    0.318847\n",
+      "4.0    0.176308\n",
+      "5.0    0.114438\n",
+      "1.0    0.039826\n",
+      "Name: income_cat, dtype: float64\n",
+      "3.0    0.350533\n",
+      "2.0    0.318798\n",
+      "4.0    0.176357\n",
+      "5.0    0.114583\n",
+      "1.0    0.039729\n",
+      "Name: income_cat, dtype: float64\n",
+      "3.0    0.358527\n",
+      "2.0    0.324370\n",
+      "4.0    0.167393\n",
+      "5.0    0.109496\n",
+      "1.0    0.040213\n",
+      "Name: income_cat, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import StratifiedShuffleSplit\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "\n",
+    "housing['income_cat']=np.ceil(housing['median_income']/1.5)\n",
+    "housing['income_cat'].where(housing['income_cat']<5,5.0,inplace=True)\n",
+    "\n",
+    "train_set,test_set=train_test_split(housing,test_size=0.2,random_state=42)\n",
+    "split = StratifiedShuffleSplit(n_splits=1,test_size=0.2,random_state=42)\n",
+    "for train_index,test_index in split.split(housing,housing['income_cat']):\n",
+    "    strat_train_set = housing.loc[train_index]\n",
+    "    strat_test_set = housing.loc[test_index]\n",
+    "print(housing['income_cat'].value_counts()/len(housing))\n",
+    "print(strat_test_set['income_cat'].value_counts()/len(strat_test_set))\n",
+    "print(test_set['income_cat'].value_counts()/len(strat_test_set))\n",
+    "\n",
+    "for set in (strat_train_set,strat_test_set):\n",
+    "    set.drop([\"income_cat\"],axis=1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 从数据探索和可视化获得洞见"
    ]
   }
  ],
