学习机器学习算法的数据准备之数据清理

--- a/learnsklearn/端到端机器学习.ipynb
+++ b/learnsklearn/端到端机器学习.ipynb
@@ -219,6 +219,58 @@
     "corr_matrix=housing.corr()\n",
     "corr_matrix['median_house_value'].sort_values(ascending=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 机器学习算法的数据准备"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#数据清理\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "housing = strat_train_set.drop(\"median_house_value\",axis=1)\n",
+    "housing_labels = strat_train_set[\"median_house_value\"].copy()\n",
+    "\n",
+    "median=housing[\"total_bedrooms\"].median()\n",
+    "housing[\"total_bedrooms\"].fillna(median)\n",
+    "\n",
+    "imputer = SimpleImputer(strategy=\"median\")\n",
+    "housing_num=housing.drop(\"ocean_proximity\",axis=1) #创建一个没有文本属性的数据副本\n",
+    "imputer.fit(housing_num)\n",
+    "print(imputer.statistics_) \n",
+    "print(housing_num.median().values)\n",
+    "X=imputer.transform(housing_num)\n",
+    "housing_tr = pd.DataFrame(X,columns=housing_num.columns)#将清洗完的ndarray转回dataframe\n",
+    "\n",
+    "#处理文本和分类属性\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.preprocessing import LabelBinarizer\n",
+    "\n",
+    "#文本转数值编码\n",
+    "encoder = LabelEncoder()\n",
+    "housing_cat = housing[\"ocean_proximity\"]\n",
+    "housing_cat_encoded = encoder.fit_transform(housing_cat)\n",
+    "print(encoder.classes_)\n",
+    "\n",
+    "#数值编码转独热编码\n",
+    "encoder =OneHotEncoder(categories='auto')\n",
+    "#返回一个scipy稀疏矩阵，用于存储大量0\n",
+    "housing_cat_1hot = encoder.fit_transform(housing_cat_encoded.reshape(-1,1)) \n",
+    "\n",
+    "#文本转独热编码\n",
+    "encoder = LabelBinarizer()\n",
+    "housing_cat_1hot = encoder.fit_transform(housing_cat)\n",
+    "housing_cat_1hot"
+   ]
   }
  ],
  "metadata": {
