--- a/learnsklearn/端到端机器学习.ipynb
+++ b/learnsklearn/端到端机器学习.ipynb
@@ -269,7 +269,71 @@
     "#文本转独热编码\n",
     "encoder = LabelBinarizer()\n",
     "housing_cat_1hot = encoder.fit_transform(housing_cat)\n",
-    "housing_cat_1hot"
+    "print(housing_cat_1hot)\n",
+    "\n",
+    "#自定义转换器\n",
+    "from sklearn.base import BaseEstimator,TransformerMixin\n",
+    "rooms_ix,bedrooms_ix,population_ix,household_ix = 3,4,5,6\n",
+    "\n",
+    "class CombinedAttributesAdder(BaseEstimator,TransformerMixin):\n",
+    "    def __init__(self,add_bedrooms_per_room = True):\n",
+    "        self.add_bedrooms_per_room = add_bedrooms_per_room\n",
+    "    def fit(self,X,y = None):\n",
+    "        return self\n",
+    "    def transform(self,X,y = None):\n",
+    "        rooms_per_household = X[:,rooms_ix]/X[:,household_ix]\n",
+    "        population_per_household = X[:,population_ix]/X[:,household_ix]\n",
+    "        if self.add_bedrooms_per_room:\n",
+    "            bedrooms_per_room = X[:,bedrooms_ix]/X[:,rooms_ix]\n",
+    "            return np.c_[X,rooms_per_household,population_per_household,bedrooms_per_room]\n",
+    "        else:\n",
+    "            return np.c_[X,rooms_per_household,population_per_household]\n",
+    "\n",
+    "attr_adder = CombinedAttributesAdder(add_bedrooms_per_room=False)\n",
+    "housing_extra_attribs = attr_adder.transform(housing.values)\n",
+    "\n",
+    "#转换流水线-处理数值\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "num_pipeline = Pipeline([\n",
+    "    ('imputer',SimpleImputer(strategy=\"median\")),\n",
+    "    ('attribs_adder',CombinedAttributesAdder()),\n",
+    "    ('std_scaler',StandardScaler()),\n",
+    "])\n",
+    "housing_num_tr = num_pipeline.fit_transform(housing_num)\n",
+    "\n",
+    "#完整处理数值和分类属性的流水线\n",
+    "from sklearn.pipeline import FeatureUnion\n",
+    "num_attribs=list(housing_num)\n",
+    "cat_attribs=[\"ocean_proximity\"]\n",
+    "\n",
+    "class DataFrameSelector(BaseEstimator,TransformerMixin):\n",
+    "    def __init__(self,attribute_names):\n",
+    "        self.attribute_names=attribute_names\n",
+    "    def fit(self,X,y=None):\n",
+    "        return self\n",
+    "    def transform(self,X):\n",
+    "        return X[self.attribute_names].values\n",
+    "\n",
+    "num_pipeline = Pipeline([\n",
+    "    ('selector',DataFrameSelector(num_attribs)),\n",
+    "    ('imputer',SimpleImputer(strategy=\"median\")),\n",
+    "    ('attribs_adder',CombinedAttributesAdder()),\n",
+    "    ('std_scaler',StandardScaler()),    \n",
+    "])\n",
+    "\n",
+    "cat_pipeline = Pipeline([\n",
+    "    ('selector',DataFrameSelector(cat_attribs)),\n",
+    "    ('label_binarizer',LabelBinarizer()),\n",
+    "])\n",
+    "\n",
+    "full_pipeline = FeatureUnion(transformer_list=[\n",
+    "    (\"num_pipline\",num_pipeline),\n",
+    "    (\"cat_pipline\",cat_pipeline),\n",
+    "])\n",
+    "\n",
+    "housing_prepared = full_pipeline.fit_transform(housing)\n",
+    "housing_prepared.shape"
    ]
   }
  ],
