--- a/learnsklearn/端到端机器学习.ipynb
+++ b/learnsklearn/端到端机器学习.ipynb
@@ -290,15 +290,22 @@
     "            return np.c_[X,rooms_per_household,population_per_household]\n",
     "\n",
     "attr_adder = CombinedAttributesAdder(add_bedrooms_per_room=False)\n",
-    "housing_extra_attribs = attr_adder.transform(housing.values)\n",
-    "\n",
+    "housing_extra_attribs = attr_adder.transform(housing.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#转换流水线-处理数值\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "num_pipeline = Pipeline([\n",
     "    ('imputer',SimpleImputer(strategy=\"median\")),\n",
     "    ('attribs_adder',CombinedAttributesAdder()),\n",
-    "    ('std_scaler',StandardScaler()),\n",
+    "    ('std_scaler',StandardScaler())\n",
     "])\n",
     "housing_num_tr = num_pipeline.fit_transform(housing_num)\n",
     "\n",
@@ -315,16 +322,28 @@
     "    def transform(self,X):\n",
     "        return X[self.attribute_names].values\n",
     "\n",
+    "class MyLabelBinarizer(BaseEstimator,TransformerMixin):\n",
+    "    '''\n",
+    "    使用LabelBinarizer导致参数报错问题\n",
+    "    https://stackoverflow.com/questions/46162855/fit-transform-takes-2-positional-arguments-but-3-were-given-with-labelbinarize'''\n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        self.encoder = LabelBinarizer(*args, **kwargs)\n",
+    "    def fit(self, x, y=0):\n",
+    "        self.encoder.fit(x)\n",
+    "        return self\n",
+    "    def transform(self, x, y=0):\n",
+    "        return self.encoder.transform(x)\n",
+    "    \n",
     "num_pipeline = Pipeline([\n",
     "    ('selector',DataFrameSelector(num_attribs)),\n",
     "    ('imputer',SimpleImputer(strategy=\"median\")),\n",
     "    ('attribs_adder',CombinedAttributesAdder()),\n",
-    "    ('std_scaler',StandardScaler()),    \n",
+    "    ('std_scaler',StandardScaler())\n",
     "])\n",
     "\n",
     "cat_pipeline = Pipeline([\n",
     "    ('selector',DataFrameSelector(cat_attribs)),\n",
-    "    ('label_binarizer',LabelBinarizer()),\n",
+    "    ('label_binarizer',MyLabelBinarizer()),\n",
     "])\n",
     "\n",
     "full_pipeline = FeatureUnion(transformer_list=[\n",
@@ -334,6 +353,13 @@
     "\n",
     "housing_prepared = full_pipeline.fit_transform(housing)\n",
     "housing_prepared.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 选择和训练模型"
    ]
   }
  ],
