--- a/learnsklearn/端到端机器学习.ipynb
+++ b/learnsklearn/端到端机器学习.ipynb
@@ -361,6 +361,97 @@
    "source": [
     "# 选择和训练模型"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#训练和评估训练集\n",
+    "#使用线性回归模型进行拟合\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "lin_reg = LinearRegression()\n",
+    "lin_reg.fit(housing_prepared,housing_labels)\n",
+    "\n",
+    "#查看预测值和实际值\n",
+    "some_data = housing.iloc[:5]\n",
+    "some_labels = housing_labels.iloc[:5]\n",
+    "some_data_prepared = full_pipeline.transform(some_data)\n",
+    "print(\"Predictions:\\t\",lin_reg.predict(some_data_prepared))\n",
+    "print(\"Labels:\\t\\t\",list(some_labels))\n",
+    "\n",
+    "#使用均方误差MSE来评估效果\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "housing_predictions = lin_reg.predict(housing_prepared)\n",
+    "lin_mse = mean_squared_error(housing_labels,housing_predictions)\n",
+    "\n",
+    "#使用均方根误差rmse来观测误差大小\n",
+    "lin_rmse = np.sqrt(lin_mse)\n",
+    "print(lin_rmse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "均方误差MSE:(线性回归的代价函数)\n",
+    "$$\\frac 1m\\sum_{i=1}^m(y_i-\\hat y_i)^2$$\n",
+    "\n",
+    "\n",
+    "数据结果欠拟合，需要增加信息完备性-新增特征，或者换用更强的模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#使用决策树回归模型进行拟合\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "tree_reg = DecisionTreeRegressor()\n",
+    "tree_reg.fit(housing_prepared,housing_labels)\n",
+    "housing_predctions = tree_reg.predict(housing_prepared)\n",
+    "tree_mse = mean_squared_error(housing_labels,housing_predctions)\n",
+    "tree_rmse = np.sqrt(tree_mse)\n",
+    "print(tree_rmse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#使用交叉验证来更好的进行评估\n",
+    "\n",
+    "#决策树K折交叉验证\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "scores = cross_val_score(tree_reg,housing_prepared,housing_labels,\n",
+    "                        scoring=\"neg_mean_squared_error\",cv=10)\n",
+    "tree_rmse_scores=np.sqrt(-scores)\n",
+    "\n",
+    "def display_scores(scores):\n",
+    "    print(\"Scores:\",scores)\n",
+    "    print(\"Mean:\",scores.mean())\n",
+    "    print(\"Standard deviation:\",scores.std())\n",
+    "    \n",
+    "display_scores(tree_rmse_scores)\n",
+    "\n",
+    "#线性回归K折交叉验证\n",
+    "lin_scores = cross_val_score(lin_reg,housing_prepared,housing_labels,\n",
+    "                        scoring=\"neg_mean_squared_error\",cv=10)\n",
+    "lin_rmse_scores=np.sqrt(-lin_scores)\n",
+    "display_scores(lin_rmse_scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "结论：决策树模型严重过拟合，以至于在测试集上表现的比线性回归还要糟糕"
+   ]
   }
  ],
  "metadata": {
