选择和训练模型以及微调模型

--- a/learnsklearn/端到端机器学习.ipynb
+++ b/learnsklearn/端到端机器学习.ipynb
@@ -450,7 +450,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "结论：决策树模型严重过拟合，以至于在测试集上表现的比线性回归还要糟糕"
+    "结论：决策树模型严重过拟合，以至于在测试集上表现的比线性回归还要糟糕\n",
+    "\n",
+    "试试集成模型-随机森林"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "forest_reg = RandomForestRegressor(n_estimators=10)\n",
+    "forest_reg.fit(housing_prepared,housing_labels)\n",
+    "housing_predctions = forest_reg.predict(housing_prepared)\n",
+    "forest_mse = mean_squared_error(housing_labels,housing_predctions)\n",
+    "forest_rmse = np.sqrt(forest_mse)\n",
+    "scores = cross_val_score(forest_reg,housing_prepared,housing_labels,\n",
+    "                        scoring=\"neg_mean_squared_error\",cv=10)\n",
+    "forest_rmse_scores=np.sqrt(-scores)\n",
+    "\n",
+    "print(forest_rmse)\n",
+    "\n",
+    "display_scores(forest_rmse_scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "尝试各种机器学习模型-直到筛出2-5个有效模型\n",
+    "\n",
+    "序列化存储\n",
+    "\n",
+    "from sklearn.externals import joblib\n",
+    "\n",
+    "joblib.dump(forest_reg,\"my_model.pkl\")\n",
+    "\n",
+    "my_model_loaded =joblib.load(\"my_model.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 微调模型 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#网格搜索\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "param_grid = [\n",
+    "    {'n_estimators':[3,10,30],'max_features':[2,4,6,8]},\n",
+    "    {'bootstrap':[False],'n_estimators':[3,10],'max_features':[2,3,4]}\n",
+    "]\n",
+    "\n",
+    "forest_reg = RandomForestRegressor()\n",
+    "grid_search = GridSearchCV(forest_reg,param_grid,cv=5,\n",
+    "                          scoring='neg_mean_squared_error')\n",
+    "grid_search.fit(housing_prepared,housing_labels)\n",
+    "grid_search.best_params_"
    ]
   }
  ],
