学习微调模型

--- a/learnsklearn/端到端机器学习.ipynb
+++ b/learnsklearn/端到端机器学习.ipynb
@@ -516,7 +516,53 @@
     "grid_search = GridSearchCV(forest_reg,param_grid,cv=5,\n",
     "                          scoring='neg_mean_squared_error')\n",
     "grid_search.fit(housing_prepared,housing_labels)\n",
-    "grid_search.best_params_"
+    "print(grid_search.best_params_)\n",
+    "print(grid_search.best_estimator_)\n",
+    "cvers = grid_search.cv_results_\n",
+    "\n",
+    "for mean_score,params in zip(cvers[\"mean_test_score\"],cvers[\"params\"]):\n",
+    "    print(np.sqrt(-mean_score),params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#随机搜索 RandomizedSearchCV\n",
+    "#集成方法 随机森林\n",
+    "#分析最佳模型及其错误\n",
+    "feature_importances =grid_search.best_estimator_.feature_importances_\n",
+    "extra_attribs = [\"rooms_per_hhold\",\"pop_per_hhold\",\"bedrooms_per_room\"]\n",
+    "cat_one_hot_attribs = list(encoder.classes_)\n",
+    "attributes = num_attribs + extra_attribs + cat_one_hot_attribs\n",
+    "sorted(zip(feature_importances,attributes),reverse=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#通过测试集评估系统\n",
+    "final_model =grid_search.best_estimator_\n",
+    "X_test = strat_test_set.drop(\"median_house_value\",axis=1)\n",
+    "y_test = strat_test_set[\"median_house_value\"].copy()\n",
+    "X_test_prepared = full_pipeline.transform(X_test)\n",
+    "final_predictions = final_model.predict(X_test_prepared)\n",
+    "\n",
+    "final_mse = mean_squared_error(y_test,final_predictions)\n",
+    "final_rmse = np.sqrt(final_mse)\n",
+    "print (final_rmse)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 启动、监控和维护系统"
    ]
   }
  ],
